--- a/Applications/libera/src/app/coin-editor/coin-editor.component.html
+++ b/Applications/libera/src/app/coin-editor/coin-editor.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-sm">
   <form (ngSubmit)="saveCoins()">
     <fieldset>
       <legend>Coin Information</legend>
